# cifar-10-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: cifar-10.h
